live server setup

--- a/.env.sample
+++ b/.env.sample
@@ -2,4 +2,4 @@ LIVE="false"
 API_HOST="http://localhost/chat_box/chat_box/"
 API_HOME="resources/backend/api_socket2/"
 HOST="localhost"
-PORT=8080
+HOST_PORT=8080
