--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ LIVE="true"
 API_HOST="http://chatbox.femitade.com/"
 API_HOME="resources/backend/api_socket2/"
 HOST="0.0.0.0"
-HOST_PORT=8080
+PORT=10000
