--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,4 @@
 API_HOST="http://localhost/chat_box/chat_box/"
 API_HOME="resources/backend/api_socket2/"
 HOST="localhost"
-HOST_PORT=8080
+PORT=8080
