--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 LIVE="true"
-API_HOST="http://chatbox.femitade.com/"
+API_HOST="https://chatbox.femitade.com/"
 API_HOME="resources/backend/api_socket2/"
 HOST="0.0.0.0"
 PORT=8080
