for live server

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 LIVE="true"
+VERIFY_SSL="false"
 API_HOST="https://chatbox.femitade.com/"
 API_HOME="resources/backend/api_socket2/"
 HOST="0.0.0.0"
