--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,7 @@
 LIVE="false"
+VERIFY_SSL="false"
 API_HOST="http://localhost/chat_box/chat_box/"
 API_HOME="resources/backend/api_socket2/"
-HOST="localhost"
+API_HOME="resources/backend/api_socket2/"
+HOST="0.0.0.0"
 PORT=8080
