--- a/koyeb.yml
+++ b/koyeb.yml
@@ -1,7 +1,26 @@
-name: chatbox-server
+name: chatbox-server2
+
 services:
-  - name: websocket-server
+  - name: chatbox-server2
+    type: web
+    regions:
+      - fra
+    instance_type: free
     ports:
-      - 8080
+      - port: 8080
+        protocol: http
     routes:
       - path: /
+        port: 8080
+    build:
+      git:
+        branch: main
+
+    health_check:
+      grace_period: 5
+      interval: 30
+      timeout: 5
+      restart_limit: 3
+      http:
+        path: /healthz
+        port: 8080
